# amplifier-collection-ddd

./: MANIFEST.in  README.md  SUPPORT.md  collection.yaml
agents/: code-planner.md  documentation-retroner.md  finalization-specialist.md  implementation-verifier.md  planning-architect.md
context/core-concepts/: context-poisoning.md  file-crawling.md  retcon-writing.md
context/phases/: 00-planning-and-alignment.md  01-documentation-retcon.md  02-approval-gate.md  03-implementation-planning.md  04-code-implementation.md  05-testing-and-verification.md
context/philosophy/: ddd-principles.md  links-to-foundation.md
ddd/: __init__.py  pyproject.toml
profiles/: documentation.md  implementation.md
